end of session 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-ABC4D8N\\SQLEXPRESS;Database=Dating_App; User ID=sa;Password=Pass@win1"
   },
+  "TokenKey": "super secret unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
